[package]
name = "hayabusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
gfx-backend-vulkan = "0.9.0"
gfx-hal = "0.9.0"
lazy_static = "1.4.0"
sysinfo = "0.29.10"
winreg = "0.51.0"
