[package]
name = "hayabusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
gfx-backend-vulkan = "0.9.0"
gfx-hal = "0.9.0"
lazy_static = "1.4.0"
local-ip-address = "0.5.5"
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
interprocess = "1.2.1"
rlua = "0.19.7"


[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"
