[package]
name = "hayabusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
gfx-backend-vulkan = "0.9.0"
gfx-hal = "0.9.0"
lazy_static = "1.4.0"
local-ip-address = "0.5.6"
sysinfo = "0.29.10"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = "0.11.22"
interprocess = "1.2.1"
rlua = "0.19.7"
serde_yaml = "0.9.27"
serde = { version = "1.0.193", features = ["derive"] }
regex = "1.10.2"
unicode-width = "0.1.11"
toml = { version = "0.8.8", features = [] }
base64 = "0.21.5"
image = "0.24.7"
nix = { version = "0.27.1", features = ["ioctl"] }


[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
